@@ -3,15 +3,12 @@
 export(CoNGAfy)
 export(annotateDB)
 export(maTrex)
-export(quietTCRgenes)
 export(runTrex)
 importFrom(Matrix,colSums)
 importFrom(Matrix,sparse.model.matrix)
 importFrom(SeuratObject,CreateAssayObject)
 importFrom(SeuratObject,CreateDimReducObject)
 importFrom(SeuratObject,CreateSeuratObject)
-importFrom(SeuratObject,DefaultAssay)
-importFrom(SeuratObject,VariableFeatures)
 importFrom(SingleCellExperiment,"reducedDim<-")
 importFrom(SingleCellExperiment,SingleCellExperiment)
 importFrom(SingleCellExperiment,colData)
@@ -28,4 +25,3 @@ importFrom(stringdist,stringdist)
 importFrom(stringr,str_sort)
 importFrom(stringr,str_split)
 importFrom(tensorflow,tf)
-importFrom(utils,getFromNamespace)
