@@ -37,7 +37,7 @@ suppressMessages(library(patchwork))
 
 To show the multiple options of Trex, the example data is derived from [GSE167118](https://www.ncbi.nlm.nih.gov/geo/query/acc.cgi?acc=GSE167118) - a cohort of CITE-seq data derived from severe COVID-19 patients. The [corresponding manuscript](https://pubmed.ncbi.nlm.nih.gov/33622974/) is excellent. The data example built into the package (trex_example) is derived from randomly sampling the single-cells from patient 17. 
 
-This is a standard workflow based on the [WNN](https://satijalab.org/seurat/articles/weighted_nearest_neighbor_analysis.html) Seurat process. However, Trex will work for Bioconductor/Single-Cell Experiment workflows as well. The major exception is the addition of ```quietTCRgenes()```, which removed T cell receptor genes from the variable gene list used for ```runPCA()```. In addition, the final 2 rows of the ADT assay are removed, as they are antibodies for specific TCRs. This prevents the weighting of the embedding based on both genes and clonotype information. Removing T cell receptor genes is also a common practice before dimensional reduction. 
+This is a standard workflow based on the [WNN](https://satijalab.org/seurat/articles/weighted_nearest_neighbor_analysis.html) Seurat process. However, Trex will work for Bioconductor/Single-Cell Experiment workflows as well. The major exception is the addition of ```scRepertoire::quietTCRgenes()```, which removed T cell receptor genes from the variable gene list used for ```runPCA()```. In addition, the final 2 rows of the ADT assay are removed, as they are antibodies for specific TCRs. This prevents the weighting of the embedding based on both genes and clonotype information. Removing T cell receptor genes is also a common practice before dimensional reduction. 
 
 
 ```{r, eval=FALSE}
